--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -150,7 +150,8 @@
     - ThunderChangeEvent: 世界打雷事件
     - WeatherChangeEvent: 天气改变事件
 
-3. 其中的方法介绍
+
+其中的方法介绍
 
 本内容将会在[第二章](第二章*事件相关方法.md)提到,也可以参考[bukkit文档](https://bukkit.windit.net/javadoc/)
 
