--- a/第一部分前言.md
+++ b/第一部分前言.md
@@ -3,7 +3,7 @@
 本部分将讲解nukkit插件的基础部分，学习完这一部分，你就可以独自实现一个
 自己的插件了，感谢您开始观看这个教程。
 
-本教程分为八个章节
+本部分分为八个章节
 
   - [如何搭建开发环境](第一章*如何搭建环境.md)
   - [插件要素](第二章*插件要素.md)
