添加一处小细节

--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -86,19 +86,19 @@ public @interface EventHandler {
 ```
 第一个是优先级，第二个是是否忽略事件被取消
 
-默认的优先级是normal,从注释可以知道，这是他们的先后顺序
+默认的优先级是normal,从注释可以知道，这是他们的先后顺序，LOWEST会最先被调用，其次是LOW，最后是MONITOR，如果在LOWEST监听器中调用了Event.setCancelled(true)，Nukkit则会忽略掉后面的 ignoreCancelled 被设置为true或者保持默认的优先级更高的监听器
 
-EventPriority.LOWEST
+- EventPriority.LOWEST
 
-EventPriority.LOW
+- EventPriority.LOW
 
-EventPriority.NORMAL
+- EventPriority.NORMAL
 
-EventPriority.HIGH
+- EventPriority.HIGH
 
-EventPriority.HIGHEST
+- EventPriority.HIGHEST
 
-EventPriority.MONITOR
+- EventPriority.MONITOR
 
 而实现监听器的优先级标记是通过 **枚举(Enum)** 实现的
 
