对于issue#1作出的解决方案

--- a/第一章-如何搭建环境.md
+++ b/第一章-如何搭建环境.md
@@ -1,4 +1,4 @@
-[下一章](第二章*插件要素.md)
+[下一章](第二章-插件要素.md)
 
 # 第一部分 第一章 如何搭建环境
 参与编写者: MagicLu550
@@ -306,7 +306,7 @@ jdk10
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
-[下一章](第二章*插件要素.md)
+[下一章](第二章-插件要素.md)
 
 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
