--- a/第七章-如何发送数据包.md
+++ b/第七章-如何发送数据包.md
@@ -1,4 +1,4 @@
-[上一章](第六章*各种工具类的介绍.md) [下一章]()
+[上一章](第六章-各种工具类的介绍.md) [下一章]()
 # 第二部分 第七章 如何发送数据包
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
@@ -221,4 +221,4 @@ public class TestListener implements Listener {
 
 四. 常用数据包的解释
 
-[上一章](第六章*各种工具类的介绍.md) [下一章]()
+[上一章](第六章-各种工具类的介绍.md) [下一章]()
