--- a/第一部分前言.md
+++ b/第一部分前言.md
@@ -5,13 +5,13 @@
 
 本部分分为八个章节
 
-  - [如何搭建开发环境](第一章*如何搭建环境.md)
-  - [插件要素](第二章*插件要素.md)
-  - [如何编写监听器](第三章*如何编写监听器.md)
-  - [如何编写指令](第四章*如何编写命令.md)
-  - [如何使用配置文件](第五章*如何使用配置文件.md)
-  - [如何编写plugin.yml](第六章*如何编写plugin.yml.md)
-  - [PluginBase类](第七章*PluginBase类.md)
-  - [练习案例](第八章*案例玩家进入信息等效果.md)
+  - [如何搭建开发环境](第一章-如何搭建环境.md)
+  - [插件要素](第二章-插件要素.md)
+  - [如何编写监听器](第三章-如何编写监听器.md)
+  - [如何编写指令](第四章-如何编写命令.md)
+  - [如何使用配置文件](第五章-如何使用配置文件.md)
+  - [如何编写plugin.yml](第六章-如何编写plugin.yml.md)
+  - [PluginBase类](第七章-PluginBase类.md)
+  - [练习案例](第八章-案例玩家进入信息等效果.md)
   
 每个章节都具有关联性，必须看完第一个才可以进行下一个，这样才能条理的学习
