--- a/第二部分前言.md
+++ b/第二部分前言.md
@@ -5,11 +5,11 @@
 
 本部分分为七个章节
 
-   - [主要的事件的介绍](第一章*主要的事件介绍.md)
-   - [事件相关方法](第二章*事件相关方法.md)
-   - [计时器的介绍](第三章*计时器的介绍.md)
-   - [Server类和PluginManager类](第四章*Server类和PluginManager类.md) 
-   - [各种实体类的方法介绍](第五章*各种实体类的方法介绍.md)
-   - [各种工具类的介绍](第六章*各种工具类的介绍.md)
-   - [如何发送数据包](第七章*如何发送数据包.md)
+   - [主要的事件的介绍](第一章-主要的事件介绍.md)
+   - [事件相关方法](第二章-事件相关方法.md)
+   - [计时器的介绍](第三章-计时器的介绍.md)
+   - [Server类和PluginManager类](第四章-Server类和PluginManager类.md) 
+   - [各种实体类的方法介绍](第五章-各种实体类的方法介绍.md)
+   - [各种工具类的介绍](第六章-各种工具类的介绍.md)
+   - [如何发送数据包](第七章-如何发送数据包.md)
 每个章节都具有关联性，必须看完第一个才可以进行下一个，这样才能条理的学习
