--- a/第一章-如何搭建环境.md
+++ b/第一章-如何搭建环境.md
@@ -60,7 +60,7 @@ TestPlugin
         <repository>
             <id>nukkitx-repo</id>
             <name>nukkitx-snapshot</name>
-            <url>https://repo.nukkitx.com/snapshot</url>
+            <url>https://repo.nukkitx.com/maven-snapshots</url>
         </repository>
     </repositories>
     
