--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -6,14 +6,15 @@
 
 学习要点: 重点记忆 Event 下各种方法的使用。要实际去编写。光看不写是记不起来的！
 
-### 本章目录
-- [前言](#一、前言)
-- [Nukkit&#32;插件初步配置](#二、Nukkit&#32;插件初步配置)
-- [从玩家加入开始...](#三、从玩家加入开始...)
-- [我不许你动&#32;你就不能动](#四、我不许你动&#32;你就不能动)
-- [禁止其余动作](#五、禁止其余动作)
-- [效果](#七、效果)
-- [最后](#八、最后)
+ - 本章目录
+    + [一、前言](#----)
+    + [二、Nukkit 插件初步配置](#--nukkit-------)
+    + [三、从玩家加入开始...](#---------)
+    + [四、我不许你动 你就不能动](#-------------)
+    + [五、禁止其余动作](#--------)
+    + [六、当玩家离开](#-------)
+    + [七、效果](#----)
+    + [八、最后](#----)
 
 
 ### 一、前言
