--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -6,23 +6,25 @@
 
 学习要点: 重点记忆 Event 下各种方法的使用。要实际去编写。光看不写是记不起来的！
 
- - 本章目录
-    + [一、前言](#----)
-    + [二、Nukkit 插件初步配置](#--nukkit-------)
-    + [三、从玩家加入开始...](#---------)
-    + [四、我不许你动 你就不能动](#-------------)
-    + [五、禁止其余动作](#--------)
-    + [六、当玩家离开](#-------)
-    + [七、效果](#----)
-    + [八、最后](#----)
+### 本章目录
+- [前言](#1)
+- [Nukkit&#32;插件初步配置](#2)
+- [从玩家加入开始...](#3)
+- [我不许你动&#32;你就不能动](#4)
+- [禁止其余动作](#5)
+- [当玩家离开](#6)
+- [效果](#7)
+- [最后](#8)
 
 
+<span id="1"></span>
 ### 一、前言
 
 本章我并不想单纯的去讲某个Event下面都有OOO方法，看了这么多章，我们来上手实现一个登录插件吧。通过这个插件来 **深入浅出** 学习各种Event的使用。
 
 带有 :red_circle: 符号需要重点记忆理解
 
+<span id="2"></span>
 ### 二、Nukkit 插件初步配置
 
 关于Nukkit插件如何开始开发，已经由@Magic Lu同学在前面讲过了，此处不再赘述。
@@ -135,6 +137,7 @@ public class AuthEventHandler implements Listener {
 到这里插件的初步配置就完成了，接下来我们大部分操作都在这个AuthEventHandler.java中...
 
 ### 三、从玩家加入开始...
+<span id="3"></span>
 
 我们在制作插件的时候，有必要认真的考虑一下插件的逻辑。
 
@@ -197,6 +200,7 @@ public class AuthEventHandler implements Listener {
 
 别急！我们这就来~
 
+<span id="4"></span>
 ### 四、我不许你动 你就不能动
 
 继续向AuthEventHandler.java中加入如下代码
@@ -245,6 +249,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 ```
 这样会有什么缺点？
 
+<span id="5"></span>
 ### 五、禁止其余动作
 
 以下的代码禁止了：
@@ -377,6 +382,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 
 > ——发散一下思维，也可以在这里修改玩家发送的内容。加称号等等都是如此实现的。
 
+<span id="6"></span>
 ### 六、当玩家离开
 
 当玩家登录，我们把他保存在`loginPlayerList`中。最后，当玩家离开，我们还需要将他移除，不然，如果一名玩家登录后下线，某人冒充顶替的话再上线的话，由于已登录列表中有他，就不需要登录了。
@@ -390,6 +396,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
         }
     }
 ```
+<span id="7"></span>
 ### 七、效果
 <img src="images/chapter2-aboutEventsMethod-4.png" alt="效果图1" style="width:49%;"/>
 <img src="images/chapter2-aboutEventsMethod-5.png" alt="效果图2" style="width:49%;"/>
@@ -399,6 +406,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 <img src="images/chapter2-aboutEventsMethod-9.png" alt="效果图6" style="width:49%;"/>
 <img src="images/chapter2-aboutEventsMethod-10.png" alt="效果图7" style="width:98%;"/>
 
+<span id="8"></span>
 ### 八、最后
 
 一个简单的登录插件就编写完了。希望大家能够了解一些Event下面的方法，最重要的是去实践。无论是Eclipse还是IDEA，都自带了非常友好的提示功能。还有反编译。可以直接通过方法名，类名来了解Nukkit。
