--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -334,7 +334,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
         }
     }
 ```
-这个EntityDamageEvent比较特殊，它没有 **getPlayer()** 方法，因为它是一个涵盖的很广，不仅仅是玩家的行为会调用这个Event。
+这个EntityDamageEvent比较特殊，它没有 `getPlayer()` 方法，因为它是一个涵盖的很广，不仅仅是玩家的行为会调用这个Event。
 
 例如：
 1. 玩家对玩家造成伤害 （发起受到伤害的是玩家）
@@ -342,7 +342,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 3. 生物对玩家造成伤害 （受到伤害的是玩家）
 4. 玩家的箭对玩家造成伤害 （子实体）
 
-这些都会调用这个方法。我们可以根据判断：发起伤害的实体`getDamager()`和受到伤害的实体`getEntity()`，只要其中有一个是未登录的玩家，就取消本次Event。
+这些都会调用这个方法。我们可以根据判断：发起伤害的实体:red_circle:`getDamager()`和受到伤害的实体:red_circle:`getEntity()`，只要其中有一个是未登录的玩家，就取消本次Event。
 
 然后是：
 ```java
@@ -376,7 +376,7 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 ```
 
 我们在这里编写了玩家聊天与输入密码的逻辑
-先判断玩家是否已登录，然后通过`event.getMessage()`获得消息，实际上也就是密码，来做对比。如果错误进行提示，如果正确则将其加入已登录玩家的列表中。
+先判断玩家是否已登录，然后通过:red_circle:`event.getMessage()`获得消息，实际上也就是密码，来做对比。如果错误进行提示，如果正确则将其加入已登录玩家的列表中。
 
 这时我们回头来看之前写的全部Event，如果该玩家登陆成功后，由于已被加入`loginPlayerList`中，此时`isPlayerLogin()`便会返回true，条件不成立，玩家的各种活动便不会被取消。
 
