--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -191,7 +191,7 @@ public class AuthEventHandler implements Listener {
 这里涉及了几个方法，我们来分开说：
 
 1. :red_circle:**event.getPlayer()** 很常用的方法，也很重要，通过它，我们可以获得这个动作(Event)的发起者。
-2. :red_circle:**event.setJoinMessage()** 这是一个PlayerJoinEvent独有的方法。通过它，我们可以设置这名玩家加入服务器后，向其他玩家发送的消息。
+2. :red_circle:**event.setJoinMessage()** 这是一个PlayerJoinEvent独有的方法。通过它，我们可以设置这名玩家加入服务器后，发送一条向全服广播某玩家已加入游戏的消息
 3. **player.sendTitle()** 这个方法可以向玩家发送两行几乎占满全屏的字，它接受5个参数：(第一行字，第二行字，渐入的时间，显示的时间，渐出的时间)，需要注意的是，Nukkit使用红石刻计算时间，也就是20刻=1秒钟。将显示的时间设为Integer变量的最大值，让其一直显示，直到取消。**同时这里还涉及一个Nukkit的BUG，如果直接在玩家加入时发送Message或者Title，玩家是不显示的，所以使用`DelayedTask`做了2秒延迟**
 
 这样我们就对新加入的玩家发送了一个要求登录的提示。
