getY() 是获取玩家高度

--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -214,8 +214,8 @@ public class AuthEventHandler implements Listener {
             // 当返回false，则玩家处在未登录状态
             Location from = event.getFrom();
             Location to = event.getTo();
-            if (from.getX() != to.getX() || from.getY() != to.getY()) {
-                // 当移动前地点 from 与 移动后地点 to 的 X，Y 坐标有任何一项不相等
+            if (from.getX() != to.getX() || from.getZ() != to.getZ()) {
+                // 当移动前地点 from 与 移动后地点 to 的 X，Z 坐标有任何一项不相等
                 event.setCancelled();
             }
         }
@@ -228,8 +228,8 @@ public class AuthEventHandler implements Listener {
 Location类型变量包含4个值得注意的方法
 ```java
 getX() // 玩家X坐标
-getY() // 玩家Y坐标
-getZ() // 玩家Z坐标（高度）
+getY() // 玩家Y坐标（高度）
+getZ() // 玩家Z坐标
 getDirectionVector() // 玩家视角
 ```
 
