--- a/第二章-事件相关方法.md
+++ b/第二章-事件相关方法.md
@@ -233,7 +233,7 @@ getZ() // 玩家Z坐标
 getDirectionVector() // 玩家视角
 ```
 
-所以，当我们判断玩家的X，Y其中任何一个值不相等，就可以:red_circle:`event.setCancelled()`来告诉Nukkit，我不批准！这样玩家此次的移动就会被取消。
+所以，当我们判断玩家的X，Z其中任何一个值不相等，就可以:red_circle:`event.setCancelled()`来告诉Nukkit，我不批准！这样玩家此次的移动就会被取消。
 
 同理，大部分的Event都可以通过`setCancelled()`来取消。但是例如`PlayerQuitEvent`便不可以，因为你没有办法阻止玩家离开服务器。
 
