整理了文件命名以及相关链接

--- a/第一章/1-2_插件要素.md
+++ b/第一章/1-2_插件要素.md
@@ -1,6 +1,6 @@
-[上一章](第一章-如何搭建环境.md) [下一章](第三章-如何编写监听器.md)
+[上一节](1-1_如何搭建环境.md) [下一节](1-3_如何编写监听器.md)
 
-# 第一部分 第二章 插件要素
+# 第一章 第二节 插件要素
 参与编写者: MagicLu550
 #### 建议学习时间: 50分钟
 ##### 学习要点: 了解nukkit的项目结构，认识一些普通组件的定义和注册
@@ -54,7 +54,7 @@ public class Example extends PluginBase implements Listener {
 我们这里定义了一个Example类和一个OtherListener类。
 OtherListener实现了Listener接口。
 如图所示实现了跨类的注册
-![2-01](images/2-01.png)
+![2-01](../images/2-01.png)
 那么如何实现在监听器使用实现注册好的主类对象?
 下面代码解决了这个问题，要注意，plugin = this这段代码
 要定义在监听器对象被定义之前，这样定义一个getPlugin方法就可以在监听器获取到了
@@ -95,9 +95,9 @@ public class OtherListener implements Listener {
     }
 }
 ```
-[监听器具体内容](第三章-如何编写监听器.md)将在后面讲解
+[监听器具体内容](1-3_如何编写监听器.md)将在后面讲解
 
-2. 注册一个[命令](第四章-如何编写命令.md)
+2. 注册一个[命令](1-4_如何编写命令.md)
 其实注册个命令就很简单，如何跨类等等和上面基本一样，但是主类是不能注册一个命令对象的
 (因为命令是继承Command对象)
 但是也有简便的方法
@@ -197,7 +197,7 @@ public class Example extends PluginBase{
 }
 ```
 
-3.[计时器部分](第三章-计时器的介绍.md)我们将在后面讲解，它的体系较复杂一些
+3.[计时器部分](2-3_计时器的介绍.md)我们将在后面讲解，它的体系较复杂一些
 
 计时器主要形同java的Runnable，线程池等等，他们本质也是实现多线程。
 也是开发者使用最广泛的一类组件。
@@ -221,4 +221,4 @@ pocketMine一样变动很大,nukkit会淘汰掉过时的函数，不会删除，
 运行插件不代表不会出现bug，但这也是相对pocketMine最方便的优势了。
 
 
-[上一章](第一章-如何搭建环境.md) [下一章](第三章-如何编写监听器.md)
+[上一节](1-1_如何搭建环境.md) [下一节](1-3_如何编写监听器.md)
