--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -1,5 +1,5 @@
-[上一章](第八章-案例玩家进入信息等效果.md) [下一章](第二章-事件相关方法.md)
-# 第二部分 第一章 主要的事件介绍
+[上一节](2-0_前言.md) [下一节](2-2_事件相关方法.md)
+# 第二章 第一节 主要的事件介绍
 参与编写者: SmallasWater MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解基本的事件
@@ -153,10 +153,10 @@
 
 其中的方法介绍
 
-本内容将会在[第二章](第二章-事件相关方法.md)提到,也可以参考[bukkit文档](https://bukkit.windit.net/javadoc/)
+本内容将会在[第二章](2-2_事件相关方法.md)提到,也可以参考[bukkit文档](https://bukkit.windit.net/javadoc/)
 
 参考文献
 - [[教程] [原创][Wiki][NPS] NukkitX 事件大全](https://www.mcbbs.net/thread-813733-1-1.html)
 - [bukkit中文doc](https://bukkit.windit.net/javadoc/)
 
-[上一章](第八章-案例玩家进入信息等效果.md) [下一章](第二章-事件相关方法.md)
+[上一节](1-8_案例玩家进入信息等效果.md) [下一节](2-2_事件相关方法.md)
