--- a/第二章/2-2_事件相关方法.md
+++ b/第二章/2-2_事件相关方法.md
@@ -1,5 +1,5 @@
-[上一章](第一章-主要的事件介绍.md) [下一章](第三章-计时器的介绍.md)
-# 第二部分 第二章 事件相关方法
+[上一节](2-1_主要的事件介绍.md) [下一节](2-3_计时器的介绍.md)
+# 第二章 第二节 事件相关方法
 参与编写者: MayflyOvO
 
 建议学习时间: 40分钟
@@ -120,15 +120,15 @@ public class AuthEventHandler implements Listener {
 
 添加Package
 
-![创建Package](images/chapter2-aboutEventsMethod-1.png)
+![创建Package](../images/chapter2-aboutEventsMethod-1.png)
 
 命名
 
-![创建Package](images/chapter2-aboutEventsMethod-2.png)
+![创建Package](../images/chapter2-aboutEventsMethod-2.png)
 
 创建类
 
-![创建Package](images/chapter2-aboutEventsMethod-3.png)
+![创建Package](../images/chapter2-aboutEventsMethod-3.png)
 
 可以看到我们定义了一个列表`loginPlayerList`来记录已经登录的玩家，同时创建了`isPlayerLogin`,`playerLogin`,`playerLogout`方法，来获取是否登录，以及操作该列表
 
@@ -398,13 +398,13 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 ```
 <span id="7"></span>
 ### 七、效果
-<img src="images/chapter2-aboutEventsMethod-4.png" alt="效果图1" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-5.png" alt="效果图2" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-6.png" alt="效果图3" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-7.png" alt="效果图4" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-8.png" alt="效果图5" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-9.png" alt="效果图6" style="width:49%;"/>
-<img src="images/chapter2-aboutEventsMethod-10.png" alt="效果图7" style="width:98%;"/>
+<img src="../images/chapter2-aboutEventsMethod-4.png" alt="效果图1" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-5.png" alt="效果图2" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-6.png" alt="效果图3" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-7.png" alt="效果图4" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-8.png" alt="效果图5" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-9.png" alt="效果图6" style="width:49%;"/>
+<img src="../images/chapter2-aboutEventsMethod-10.png" alt="效果图7" style="width:98%;"/>
 
 <span id="8"></span>
 ### 八、最后
@@ -413,4 +413,4 @@ if (from.getX() != to.getX() || from.getY() != to.getY() || from.getZ() != to.ge
 
 当然，这个插件还有一部分功能是残缺的，比如注册。有一些Event没有禁止掉，比如扔物品和捡起物品。这些都等待屏幕前的你来开发。
 
-[上一章](第一章-主要的事件介绍.md) [下一章](第三章-计时器的介绍.md)
+[上一节](2-1_主要的事件介绍.md) [下一节](2-3_计时器的介绍.md)
