--- a/第二章/2-3_计时器的介绍.md
+++ b/第二章/2-3_计时器的介绍.md
@@ -1,5 +1,5 @@
-[上一章](第二章-事件相关方法.md) [下一章](第四章-Server类和PluginManager类.md)
-# 第二部分 第三章 计时器的介绍
+[上一节](2-2_事件相关方法.md) [下一节](2-4_Server类和PluginManager类.md)
+# 第二章 第三节 计时器的介绍
 参与编写者：`zzz1999`
 #### 建议学习时间：3分钟
 ##### 学习要点：了解计时器的功能以及如何使用
@@ -340,4 +340,4 @@ public class Main extends PluginBase implements Listener {
 
 
 
-[上一章](第二章-事件相关方法.md) [下一章](第四章-Server类和PluginManager类.md)
+[上一节](2-2_事件相关方法.md) [下一节](2-4_Server类和PluginManager类.md)
