--- a/第一章/1-1_如何搭建环境.md
+++ b/第一章/1-1_如何搭建环境.md
@@ -1,6 +1,6 @@
-[下一章](第二章-插件要素.md)
+[下一节](1-2_插件要素.md)
 
-# 第一部分 第一章 如何搭建环境
+# 第一章 第一节 如何搭建环境
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 学会使用idea搭建maven环境和nukkit开发环境,并学习调试nukkit项目
@@ -13,13 +13,13 @@
 1. 首先上[idea官网](https://www.jetbrains.com/idea/download/#section=mac)下载我们所需要的版本，我们
 一般选择免费的Community版本，当然您也可以选择购买Ultimate版本,Community版本其实已经符合我们使用的需求，当然
 作者使用的是Ultimate版本在此教学。
-![1-01](images/1-01.png)
+![1-01](../images/1-01.png)
 
 2.打开idea后，我们这里使用[maven](https://maven.apache.org/)项目进行构建,这里使用[jdk1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)，为这些选项即可
-![1-02](images/1-02.png)
+![1-02](../images/1-02.png)
 
 3.输入完groupId和artifactId(这些是自定义的)，创建项目后，我们会进入这个界面,这里我artifactId为MyFirstPlugin
-![1-03](images/1-03.png)
+![1-03](../images/1-03.png)
 
 ```
 转自Snake1999: 这里有必要做一些详细说明。GroupId 经常也是 Java 项目的包名。Java 项目的包命名规则有这样的约定：
@@ -74,7 +74,7 @@ TestPlugin
 ```
 
 如图所示
-![1-04](images/1-04.png)
+![1-04](../images/1-04.png)
 
 5. 接下来在程序上可以进行开发了
 
@@ -109,7 +109,7 @@ TestPlugin
 ```
 
 目前大概为这种结构
-![1-05](images/1-05.png)
+![1-05](../images/1-05.png)
 
 但是，我们项目目前这样是不够的，Example类需要继承PluginBase才可以成为真正可以加载的主类
 
@@ -284,15 +284,15 @@ jdk10
 以此类推....
 
 如图所示添加这些标签
-![1-08](images/1-08.png)
+![1-08](../images/1-08.png)
 如图中按钮所示(不要在意其中的项目)
-![1-06](images/1-06.png)
+![1-06](../images/1-06.png)
 之后我们找到其中的package,点击即可
-![1-07](images/1-07.png)
+![1-07](../images/1-07.png)
 如图所示，出现"BUILD SUCCESS"我们就成功了
-![1-09](images/1-09.png)
+![1-09](../images/1-09.png)
 一般的，目标jar包会产生在target文件夹中
-![1-10](images/1-10.png)
+![1-10](../images/1-10.png)
 
 2. 部署
 
@@ -306,7 +306,7 @@ jdk10
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
-[下一章](第二章-插件要素.md)
+[下一节](1-2_插件要素.md)
 
 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
