--- a/第一章/1-5_如何使用配置文件.md
+++ b/第一章/1-5_如何使用配置文件.md
@@ -1,5 +1,6 @@
-[上一章](第四章-如何编写命令.md) [下一章](第六章-如何编写plugin.yml.md)
-# 第一部分 第五章 如何编写配置文件
+[上一节](1-4_如何编写命令.md) [下一节](1-6_如何编写plugin.yml.md)
+
+# 第一章 第五节 如何编写配置文件
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解如何创建配置文件，了解使用SimpleConfig
@@ -53,13 +54,13 @@ array3:
 前提是你的resources下面要创建一个config.yml,这个方法会默认在
 plugins/${你的插件名字}下创建一个config.yml,并且会把resources下面的那个
 config.yml内容复制过来.
-![5-01](images/5-01.png)
+![5-01](../images/5-01.png)
 之后我们调用这个方法即可
-![5-02](images/5-02.png)
+![5-02](../images/5-02.png)
 我们这里打开一个服务器，做一个实验可以看看,插件名为FirstPlugin
-![5-03](images/5-03.png)
+![5-03](../images/5-03.png)
 我们插件被加载成功,我们看看我们的文件夹
-![5-04](images/5-04.png)
+![5-04](../images/5-04.png)
 发现.../plugins/FirstPlugin下面出现了一模一样的config.yml
 
 使用自定义的配置
@@ -220,4 +221,4 @@ class Utils{
 
 ```
 
-[上一章](第四章-如何编写命令.md) [下一章](第六章-如何编写plugin.yml.md)
+[上一节](1-4_如何编写命令.md) [下一节](1-6_如何编写plugin.yml.md)
