--- a/第一章/1-8_案例玩家进入信息等效果.md
+++ b/第一章/1-8_案例玩家进入信息等效果.md
@@ -1,5 +1,7 @@
-[上一章](第七章-PluginBase类.md) [下一章](第一章-主要的事件介绍.md)
-# 第一部分 第八章 案例课:玩家进入案例演示
+[上一节](1-7_PluginBase类.md) [下一节](../第二章/2-0_前言.md)
+
+
+# 第一章 第八节 案例课:玩家进入案例演示
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
 ##### 学习要点: 对于之前知识的巩固和加深认识
@@ -193,7 +195,7 @@ public class MyJoin extends PluginBase {
 
 ```
 
-这大概是这个项目的流程，很简单，但是大家可以练一练，扎实基本功，我们马上开始推入下一章
+这大概是这个项目的流程，很简单，但是大家可以练一练，扎实基本功，我们马上开始推入下一节
 感谢你们的支持
 
-[上一章](第七章-PluginBase类.md) [下一章](第一章-主要的事件介绍.md)
+[上一节](1-7_PluginBase类.md) [下一节](2-1_主要的事件介绍.md)
