--- a/第二章/2-7_如何发送数据包.md
+++ b/第二章/2-7_如何发送数据包.md
@@ -1,5 +1,5 @@
-[上一章](第六章-各种工具类的介绍.md) [下一章]()
-# 第二部分 第七章 如何发送数据包
+[上一节](2-6_各种工具类的介绍.md) [下一节]()
+# 第二章 第七节 如何发送数据包
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解数据包和主要的发送形式
@@ -221,4 +221,4 @@ public class TestListener implements Listener {
 
 四. 常用数据包的解释
 
-[上一章](第六章-各种工具类的介绍.md) [下一章]()
+[上一节](2-6_各种工具类的介绍.md) [下一节]()
