--- a/第一章/1-3_如何编写监听器.md
+++ b/第一章/1-3_如何编写监听器.md
@@ -1,4 +1,4 @@
-[上一节](第二章-1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
+[上一节](1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
 
 # 第一章 第三节 如何编写监听器
 参与编写者: MagicLu550,innc11
@@ -207,7 +207,7 @@ public class OtherListener implements Listener {
     }
 }
 ```
-之后[注册监听器](第二章-1-2_插件要素.md)，我们就可以使用我们的事件了。
+之后[注册监听器](1-2_插件要素.md)，我们就可以使用我们的事件了。
 ```
     this.getServer().getPluginManager().registerEvents(new OtherListener(),this);
 ```
@@ -247,4 +247,4 @@ public class OtherListener implements Listener {
 可以注册单个EventHandler，但不太常用，我这里也不会再过多
 阐述了，如果想了解，可以发issue，我将会添加这方面的内容
 
-[上一节](第二章-1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
+[上一节](1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
