--- a/第一章/1-4_如何编写命令.md
+++ b/第一章/1-4_如何编写命令.md
@@ -6,11 +6,11 @@
 ##### 学习要点: 学习自己创建一个简易的命令,了解指令和指令映射,了解SimpleCommand的使用
 
 其实创建一个简易的命令很简单，创建的过程也不必多讲，先前我在
-[第二章](第二章-1-2_插件要素.md)已经提到了如何创建它，大家可以参考
+[第二章](1-2_插件要素.md)已经提到了如何创建它，大家可以参考
 
 nukkit的原生命令也是很多基于Command创建的.很多项目是需求指令
 以使得用户和您的项目操作，也就是作为一个 **接口(Interface)** ,
-接下来在基于[第二章](第二章-1-2_插件要素.md)的命令注册后，我们介绍
+接下来在基于[第二章](1-2_插件要素.md)的命令注册后，我们介绍
 以下nukkit的命令。
 nukkit的命令的父类是Command，它有很多的构造方法
 ```
@@ -86,7 +86,7 @@ Command,CommandMap有很多方法
         1. boolean execute(CommandSender commandSender, String label, String[] strings)
             
             这个方法是需要开发者自行实现的方法，当指令被触发，就会执行execute里的代码
-            它的参数我们在[第二章](第二章-1-2_插件要素.md)提到了
+            它的参数我们在[第二章](1-2_插件要素.md)提到了
             
         2. String getName()
             
