--- a/第四章-如何编写命令.md
+++ b/第四章-如何编写命令.md
@@ -202,7 +202,7 @@ public class MySimpleCommand {
 
     @Command(name = "hello",description = "233",usageMessage = "/hello")
     @Arguments(max = 10,min = 0)
-    public void onHelloCommand(Object object, CommandSender sender, String label, String[] args){
+    public void onHelloCommand(CommandSender sender, String label, String[] args){
         //这里写指令处理代码
     }
 }
