--- a/第一章/1-8_案例玩家进入信息等效果.md
+++ b/第一章/1-8_案例玩家进入信息等效果.md
@@ -198,4 +198,4 @@ public class MyJoin extends PluginBase {
 这大概是这个项目的流程，很简单，但是大家可以练一练，扎实基本功，我们马上开始推入下一节
 感谢你们的支持
 
-[上一节](1-7_PluginBase类.md) [下一节](2-1_主要的事件介绍.md)
+[上一节](1-7_PluginBase类.md) [下一节](../第二章/2-0_前言.md)
