--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -77,9 +77,9 @@
     - LevelLoadEvent: 当一个世界被加载时调用
     - LevelSaveEvent: 当一个世界被保存时调用
     - LevelUnloadEvent: 当一个世界被卸载时调用
-    SpawnChangeEvent: 一个在世界的出生点被改变时调用的事件
-    ThunderChangeEvent: 同天气类下同名事件
-    WeatherChangeEvent: 同天气类下同名事件
+    - SpawnChangeEvent: 一个在世界的出生点被改变时调用的事件
+    - ThunderChangeEvent: 同天气类下同名事件
+    - WeatherChangeEvent: 同天气类下同名事件
 - player: 玩家类
     - PlayerAchievementAwardedEvent: 当玩家获得某个成就时触发此事件
     - PlayerAnimationEvent: 玩家动作事件
