--- a/第一章/1-1_如何搭建环境.md
+++ b/第一章/1-1_如何搭建环境.md
@@ -306,6 +306,10 @@ jdk10
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
+- IDE汉化补丁
+
+感谢Testfor,Itname等人的帮助，我们找到了idea的汉化包，可以到这里[下载](https://github.com/pingfangx/TranslatorX)
+
 [下一节](1-2_插件要素.md)
 
 参考文献
