--- a/章外篇/索引-常用工具的网页索引.md
+++ b/章外篇/索引-常用工具的网页索引.md
@@ -11,3 +11,4 @@
 - [appicon](https://appicon.co/)
 - [调色板](https://flatuicolors.com/palette/defo)
 - [上传项目至中央仓库](https://issues.sonatype.org/secure/WelcomeToJIRA.jspa)
+- [Blockbench模型编辑器](https://www.mcbbs.net/forum.php?mod=viewthread&tid=809404)
