添加本地导入

--- a/第一章/1-1_如何搭建环境.md
+++ b/第一章/1-1_如何搭建环境.md
@@ -306,6 +306,113 @@ jdk10
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
+- 本地的导入和打包
+
+鉴于很多人的需要(原因是nukkitx的maven服务器太卡了)，这里我写一下本地导入jar包的方式
+
+> 导入包
+
+其实要简单很多，您需要上[nukkitx](https://ci.nukkitx.com/job/NukkitX/job/Nukkit/job/master/)的jenkins下载一个nukkit的jar包。
+
+之后将您的jar包放到您项目根目录的libs文件夹下(这里您需要自己创建)
+
+![1-11](../images/1-11.png)
+
+之后我们把它给导入我们的项目里
+
+这里选择libraries
+
+![1-12](../images/1-12.png)
+
+我们选择Java，这样可以直接导入本地jar包
+
+![1-13](../images/1-13.png)
+
+之后我们选择我们的nukkit的jar包
+
+![1-14](../images/1-14.png)
+
+导入完毕
+
+![1-15](../images/1-15.png)
+
+> 构建jar包
+
+之后，我们在libs下创建一个plugins文件夹(先前的点击下面的OK保存一下)
+
+![1-16](../images/1-16.png)
+
+之后再打开我们的这个窗口,找到artifacts，之后点击那个'+'，找到JAR
+
+![1-17](../images/1-17.png)
+
+然后创建之后，是这样子(图中已经说明了compile output)
+
+![1-18](../images/1-18.png)
+
+之后，如图中所示，把plugin.yml也添加到我们的jar包里
+
+![1-19](../images/1-19.png)
+
+![1-20](../images/1-20.png)
+
+![1-21](../images/1-21.png)
+
+之后我们再修改打包目标的路径，将路径指向我们jar包的根目录
+
+![1-24](../images/1-24.png)
+
+![1-25](../images/1-25.png)
+
+![1-26](../images/1-26.png)
+
+记得设置上这个
+
+![1-34](../images/1-34.png)
+
+之后保存
+
+![1-27](../images/1-27.png)
+
+> 设置工作文件夹
+
+最后一步，设置我们的运行环境,如图所示，点击Add Configuration
+
+![1-28](../images/1-28.png)
+
+之后，我们分别设置jar包和工作文件夹
+
+![1-29](../images/1-29.png)
+
+![1-30](../images/1-30.png)
+
+![1-31](../images/1-31.png)
+
+![1-32](../images/1-32.png)
+
+之后保存
+
+![1-33](../images/1-33.png)
+
+> 运行
+
+我们这里写个主类
+
+![1-35](../images/1-35.png)
+
+我们点击build，来打包插件
+
+![1-36](../images/1-36.png)
+
+之后我们进行运行
+
+![1-37](../images/1-37.png)
+
+我们发现成功了
+
+![1-38](../images/1-38.png)
+
+
 - IDE汉化补丁
 
 感谢Testfor,Itname等人的帮助，我们找到了idea的汉化包，可以到这里[下载](https://github.com/pingfangx/TranslatorX)
