--- a/第一章/1-1_如何搭建环境.md
+++ b/第一章/1-1_如何搭建环境.md
@@ -306,7 +306,7 @@ jdk10
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
-- 本地的导入和打包
+### 本地的导入和打包
 
 鉴于很多人的需要(原因是nukkitx的maven服务器太卡了)，这里我写一下本地导入jar包的方式
 
