--- a/第三章/3-0_前言.md
+++ b/第三章/3-0_前言.md
@@ -4,8 +4,8 @@
 
 本部分分为三个章节
 
-   - 主要的Form种类及介绍
-   - 使用NukkitX自带的Form创建UI
-   - 使用外部库GUI创建UI
+   - [主要的Form种类及介绍](3-1_主要的Form种类及介绍.md)
+   - [使用NukkitX自带的Form创建UI](3-2_使用NukkitX自带的Form创建UI.md)
+   - [使用外部库GUI创建UI](3-2_使用外部库GUI创建UI.md)
 
 每个章节都具有关联性，必须看完第一个才可以进行下一个，这样才能条理的学习
