--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -24,6 +24,7 @@
     - LeavesDecayEvent: 当树叶消失时触发此事件
     - LiquidFlowEvent: 当液体流动时触发此事件
     - SignChangeEvent: 在玩家设置牌子上的内容子时触发
+    - BlockFallEvent: 重力方块下落时触发(当类似于砾石、沙子、龙蛋、混凝土、雪层和铁砧的方块落下时调用(判断下面是不是空气，火，液体)，如果被取消，方块将不会落下)
 - entity: 实体类
     - CreatureSpawnEvent: 使用生成蛋时触发该事件
     - CreeperPowerEvent: 当爬行者被闪电击中时触发该事件
