--- a/专栏-关于我们常见的那些坑.md
+++ b/专栏-关于我们常见的那些坑.md
@@ -6,7 +6,16 @@
 1. ClassCastException
     这种是类转换问题的锅，可以查看下
 2. EventException: null
+    说明在调用事件的时候，发现了空指针异常，这发生在您的编译器
 3. Main类名称指错的问题
+    请对应一下plugin.yml
 4. ClassNotFoundException的问题
+   一般是缺少类库或者类库版本过新/过旧 
 5. NullPointerException的常见问题
+   这是空指针异常，请注意您是否忘记判断null了
 6. 忘记注册监听器的坑
+   您的监听器跑不起来多半是忘记注册了
+7. 加载插件，加入游戏莫名其妙闪退
+   可以注意一下您的plugin.yml缩进是否有问题
+8. 使用setPermission设置的只是对于普通玩家而言看不见，实际上还是能执行
+    
