补充683次构建添加的跳跃事件

--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -122,6 +122,7 @@
     - PlayerToggleSneakEvent: 玩家切换潜行状态时触发
     - PlayerToggleSprintEvent: 玩家切换疾跑状态时触发
     - PlayerToggleSwimEvent: 玩家切换游泳状态时触发
+    - PlayerJumpEvent: 玩家跳跃时触发
 - plugin: 插件类
     - PluginDisableEvent: 插件禁用事件
     - PluginEnableEvent: 插件启用事件
