--- a/第一章/1-4_如何编写命令.md
+++ b/第一章/1-4_如何编写命令.md
@@ -203,8 +203,9 @@ public class MySimpleCommand {
 
     @Command(name = "hello",description = "233",usageMessage = "/hello")
     @Arguments(max = 10,min = 0)
-    public void onHelloCommand(CommandSender sender, String label, String[] args){
+    public boolean onHelloCommand(CommandSender sender, String label, String[] args){
         //这里写指令处理代码
+        return true;//为布尔类型，否则会发生空指针异常，在先前源码可以分析其返回类型
     }
 }
 ```
