--- a/第一章/1-1_如何搭建环境.md
+++ b/第一章/1-1_如何搭建环境.md
@@ -281,7 +281,14 @@ jdk10
         </plugins>
     </build>
 ```
-以此类推....
+以此类推....如果不可行可以删掉前面的1.
+
+比如jdk11就是
+
+```
+<source>11</source>
+<target>11</target>
+```
 
 如图所示添加这些标签
 ![1-08](../images/1-08.png)
