--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -66,8 +66,8 @@
     - InventoryCloseEvent: 当玩家关闭背包时触发本事件
     - InventoryMoveItemEvent: 非玩家触发格子物品传输时触发此事件(如漏斗)
     - InventoryOpenEvent: 当玩家打开背包时触发本事件
-    - InventoryPickupArrowEvent: 当漏斗/漏斗矿车收起发射出去的箭时触发本事件
-    - InventoryPickupItemEvent: 当漏斗/漏斗矿车收起掉落的物品时触发本事件
+    - InventoryPickupArrowEvent: 当玩家收起发射出去的箭时触发本事件
+    - InventoryPickupItemEvent: 当玩家收起掉落的物品时触发本事件
     - InventoryTransactionEvent: 村民交易事件
     - StartBrewEvent: 开始酿造事件
 - level: 世界类
