优化结构，加入新的

--- a/前言/如何搭建环境.md
+++ b/前言/如何搭建环境.md
@@ -1,6 +1,5 @@
-[下一节](1-2_插件要素.md)
+#前言-如何搭建环境
 
-# 第一章 第一节 如何搭建环境
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 学会使用idea搭建maven环境和nukkit开发环境,并学习调试nukkit项目
@@ -78,77 +77,110 @@ TestPlugin
 
 5. 接下来在程序上可以进行开发了
 
-二. 项目结构
+[comment]: <> (二. 项目结构)
 
-1.nukkit的基本项目结构为
-```
+[comment]: <> (1.nukkit的基本项目结构为)
 
-    -- project
-        -- src
-            -- main-class
-        -- resources
-            -- plugin.yml
-```
-因此我们需要创建主类和plugin.yml(插件配置文件)
-转自snake1999:
+[comment]: <> (```)
 
-    - 每个插件都有 plugin.yml 文件。
-    - 这里介绍一些设置，说明这个文件的格式。
-    - 插件没有这个文件，就不会被 Nukkit 识别和加载。
-    - 这个文件的最基本的应该是类似这样的：
+[comment]: <> (    -- project)
+
+[comment]: <> (        -- src)
+
+[comment]: <> (            -- main-class)
+
+[comment]: <> (        -- resources)
+
+[comment]: <> (            -- plugin.yml)
+
+[comment]: <> (```)
+
+[comment]: <> (因此我们需要创建主类和plugin.yml&#40;插件配置文件&#41;)
+
+[comment]: <> (转自snake1999:)
+
+[comment]: <> (    - 每个插件都有 plugin.yml 文件。)
+
+[comment]: <> (    - 这里介绍一些设置，说明这个文件的格式。)
+
+[comment]: <> (    - 插件没有这个文件，就不会被 Nukkit 识别和加载。)
+
+[comment]: <> (    - 这个文件的最基本的应该是类似这样的：)
     
-```yaml
+[comment]: <> (```yaml)
         
-        name: FirstPlugin             # nukkit运行时识别的插件名
-        main: net.noyark.www.Example  # 主类名称
-        version: "0.0.1"              # 版本号
-        author: 你的名字，这里指作者名称
-        api: ["1.0.8"]                # 早期nukkit api为1.0.0，
-                                      # 目前大概为1.0.8
-        description: My first plugin  #介绍
-```
+[comment]: <> (        name: FirstPlugin             # nukkit运行时识别的插件名)
 
-目前大概为这种结构
-![1-05](../images/1-05.png)
+[comment]: <> (        main: net.noyark.www.Example  # 主类名称)
 
-但是，我们项目目前这样是不够的，Example类需要继承PluginBase才可以成为真正可以加载的主类
+[comment]: <> (        version: "0.0.1"              # 版本号)
+
+[comment]: <> (        author: 你的名字，这里指作者名称)
+
+[comment]: <> (        api: ["1.0.8"]                # 早期nukkit api为1.0.0，)
+
+[comment]: <> (                                      # 目前大概为1.0.8)
+
+[comment]: <> (        description: My first plugin  #介绍)
+
+[comment]: <> (```)
+
+[comment]: <> (目前大概为这种结构)
+
+[comment]: <> (![1-05]&#40;../images/1-05.png&#41;)
+
+[comment]: <> (但是，我们项目目前这样是不够的，Example类需要继承PluginBase才可以成为真正可以加载的主类)
 
 
-```java
-package net.noyark.www;
+[comment]: <> (```java)
 
-import cn.nukkit.plugin.PluginBase;
+[comment]: <> (package net.noyark.www;)
 
-public class Example extends PluginBase {
+[comment]: <> (import cn.nukkit.plugin.PluginBase;)
 
-    /**
-     * 在服务器加载完成前执行一次
-     */
-    @Override
-    public void onLoad() {
+[comment]: <> (public class Example extends PluginBase {)
+
+[comment]: <> (    /**)
+
+[comment]: <> (     * 在服务器加载完成前执行一次)
+
+[comment]: <> (     */)
+
+[comment]: <> (    @Override)
+
+[comment]: <> (    public void onLoad&#40;&#41; {)
         
-    }
+[comment]: <> (    })
 
-    /**
-     * 在服务器加载完成后执行一次
-     */
-    @Override
-    public void onEnable() {
+[comment]: <> (    /**)
+
+[comment]: <> (     * 在服务器加载完成后执行一次)
+
+[comment]: <> (     */)
+
+[comment]: <> (    @Override)
+
+[comment]: <> (    public void onEnable&#40;&#41; {)
         
-    }
+[comment]: <> (    })
 
-    /**
-     * 服务器即将关闭前执行一次
-     */
+[comment]: <> (    /**)
 
-    @Override
-    public void onDisable() {
+[comment]: <> (     * 服务器即将关闭前执行一次)
+
+[comment]: <> (     */)
+
+[comment]: <> (    @Override)
+
+[comment]: <> (    public void onDisable&#40;&#41; {)
         
-    }
-}
-```
+[comment]: <> (    })
 
-三. 调试插件
+[comment]: <> (})
+
+[comment]: <> (```)
+
+二. 调试插件
 
 其实调试插件很简单，这里我们需要这几个过程
 
@@ -361,7 +393,7 @@ jdk10
 
 感谢Testfor,Itname等人的帮助，我们找到了idea的汉化包，可以到这里[下载](https://github.com/pingfangx/TranslatorX)
 
-[下一节](1-2_插件要素.md)
+[下一节](../第一章/1-0_前言.md)
 
 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
