--- a/第一章/1-3_如何编写监听器.md
+++ b/第一章/1-3_如何编写监听器.md
@@ -1,9 +1,14 @@
-[上一节](1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
+[上一节](1-2_了解PluginBase.md) [下一节](1-4_如何编写命令.md)
 
 # 第一章 第三节 如何编写监听器
-参与编写者: MagicLu550,innc11
+参与编写者: MagicLu550,innc11,smartcmd
 #### 建议学习时间: 30分钟
 ##### 学习要点: 学习如何构建一个简单的监听器,和自己构造事件
+nukkit插件最主要的运行方式就是:
+```
+事件被触发 -> 执行动作
+```
+所以说监听器是插件中非常重要的部分
 
 其实看一看这章，没有啥可讲的。监听器的内容很简单，很多人认识它的困难主要是概念上，
 而不是使用上。
@@ -207,7 +212,7 @@ public class OtherListener implements Listener {
     }
 }
 ```
-之后[注册监听器](1-2_插件要素.md)，我们就可以使用我们的事件了。
+之后，我们就可以使用我们的事件了。
 ```
     this.getServer().getPluginManager().registerEvents(new OtherListener(),this);
 ```
@@ -247,4 +252,4 @@ public class OtherListener implements Listener {
 可以注册单个EventHandler，但不太常用，我这里也不会再过多
 阐述了，如果想了解，可以发issue，我将会添加这方面的内容
 
-[上一节](1-2_插件要素.md) [下一节](1-4_如何编写命令.md)
+[上一节](1-2_了解PluginBase.md) [下一节](1-4_如何编写命令.md)
