--- a/第一章/1-0_前言.md
+++ b/第一章/1-0_前言.md
@@ -1,19 +1,6 @@
-# 第一章 第零节 基础准备
+# 第一章 第零节 前言
+参与编写者: smartcmd
 
-您需要在掌握java基础知识前，再观看此教程。
+此章介绍了一些nk插件的基本知识，学习完本章，你就可以自己编写一个简单的插件了！
 
-本部分将讲解nukkit插件的基础部分，学习完这一部分，你就可以独自实现一个
-自己的插件了，感谢您开始观看这个教程。
-
-本部分分为八个小节
-
-  - [如何搭建开发环境](1-1_如何搭建环境.md)
-  - [插件要素](1-2_插件要素.md)
-  - [如何编写监听器](1-3_如何编写监听器.md)
-  - [如何编写指令](1-4_如何编写命令.md)
-  - [如何使用配置文件](1-5_如何使用配置文件.md)
-  - [如何编写plugin.yml](1-6_如何编写plugin.yml.md)
-  - [PluginBase类](1-7_PluginBase类.md)
-  - [练习案例](1-8_案例玩家进入信息等效果.md)
-  
-每个小节之间都具有关联性，必须看完第一个才可以进行下一个，这样才能条理的学习
+[下一节](1-1_what's plugin.md)
