--- a/第一章/1-7_案例玩家进入信息等效果.md
+++ b/第一章/1-7_案例玩家进入信息等效果.md
@@ -1,7 +1,7 @@
 [上一节](1-7_PluginBase类.md) [下一节](../第二章/2-0_前言.md)
 
 
-# 第一章 第八节 案例课:玩家进入案例演示
+# 第一章 第七节 案例课:玩家进入案例演示
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
 ##### 学习要点: 对于之前知识的巩固和加深认识
@@ -16,7 +16,7 @@
     - 创建配置
 
 - 创建监听器
-    - 读取配置内容
+    - 读取配置内容 
     - 发送玩家信息
 - 创建命令
     -判断
