--- a/第一章/1-4_如何编写命令.md
+++ b/第一章/1-4_如何编写命令.md
@@ -5,13 +5,26 @@
 #### 建议学习时间: 30分钟
 ##### 学习要点: 学习自己创建一个简易的命令,了解指令和指令映射,了解SimpleCommand的使用
 
-其实创建一个简易的命令很简单，创建的过程也不必多讲，先前我在
-[第二章](1-2_插件要素.md)已经提到了如何创建它，大家可以参考
+其实创建一个简易的命令很简单，我们可以在`PluginBase`中重写`onCommand`方法，进行`equals`识别，比如
+```java
+public class PluginMain extends PluginBase{
+            //... 其他
+    @Override
+    // args指后面的那一串参数，直接取出即可，注意先检查length，label其实就是指令名称，也可以用command的信息，这个是个人习惯
+    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+        if("hello".equals(command.getName())){ // 识别指令名称
+                this.getLogger().info("hello!");
+                return true;
+        }
+        return false;
+    }
+}
+
+```
 
 nukkit的原生命令也是很多基于Command创建的.很多项目是需求指令
-以使得用户和您的项目操作，也就是作为一个 **接口(Interface)** ,
-接下来在基于[第二章](1-2_插件要素.md)的命令注册后，我们介绍
-以下nukkit的命令。
+以使得用户和您的项目操作，也就是作为一个 **接口(Interface)** ,接下来我们介绍以下nukkit的命令。
+
 nukkit的命令的父类是Command，它有很多的构造方法
 ```
     public Command(String name) {
