添加常用的关闭实体的方法介绍

--- a/第二章/2-5_各种实体类的方法介绍.md
+++ b/第二章/2-5_各种实体类的方法介绍.md
@@ -95,11 +95,28 @@ public boolean onUpdate(int currentTick) {
 //获取之后实例化 自定义实体
 //传入对象
 CustomEntity custom = new CustomEntity(position.getChunk(),Entity.getDefaultNBT(position));
-custom.spawnToAll();//生成实体展示给全部玩家 如果只想给单个玩家发送实体 则调用 spawnTo(玩家对象);
+custom.spawnToAll();//生成实体展示给全部玩家
+
+// 如果只想给单个玩家发送实体 则调用 spawnTo(玩家对象);
+custom.spawnTo(Server.getInstance().getPlayer("Steve")/*玩家对象*/);
 ```
 
+   关闭实体
 
+```java
+//几种常用的方法
 
+//despawn方法并不会关闭实体，只是不显示给玩家
+custom.despawnFromAll(); //和spawnToAll()相反，取消展示实体给全部玩家
+custom.despawnFrom(Server.getInstance().getPlayer("Steve")/*玩家对象*/); //和spawnTo(玩家对象)相反，取消展示实体给指定玩家
 
+//关闭实体 关闭后不能再调用spawnTo等方法
+custom.close();
+
+//杀死实体 和close()方法相比，使用此方法会正常掉落物品(如果有的话)
+//如果custom是继承EntityLiving的 还会触发EntityDeathEvent
+custom.kill();
+
+```
 
 [上一节](2-4_Server类和PluginManager类.md) [下一节](2-6_各种工具类的介绍.md)
