--- a/第二章/2-1_主要的事件介绍.md
+++ b/第二章/2-1_主要的事件介绍.md
@@ -106,7 +106,9 @@
     - PlayerItemConsumeEvent: 当玩家使用了一个消耗品(食物/药水/牛奶桶)时触发
     - PlayerItemHeldEvent: 玩家手持某物品事件
     - PlayerJoinEvent: 玩家进入服务器事件
+    - PlayerJumpEvent: 玩家跳跃时触发
     - PlayerKickEvent: 玩家被服务器踢出事件
+    - PlayerLocallyInitializedEvent 玩家客户端初始化完成事件
     - PlayerLoginEvent: 玩家尝试登录的事件
     - PlayerMapInfoRequestEvent: 玩家请求地图信息事件
     - PlayerMouseOverEntityEvent: 玩家鼠标停留在实体上事件
@@ -122,8 +124,6 @@
     - PlayerToggleSneakEvent: 玩家切换潜行状态时触发
     - PlayerToggleSprintEvent: 玩家切换疾跑状态时触发
     - PlayerToggleSwimEvent: 玩家切换游泳状态时触发
-    - PlayerJumpEvent: 玩家跳跃时触发
-    - PlayerLocallyInitializedEvent 玩家客户端初始化事件
 - plugin: 插件类
     - PluginDisableEvent: 插件禁用事件
     - PluginEnableEvent: 插件启用事件
@@ -140,6 +140,7 @@
     - QueryRegenerateEvent: GameSpy4协议监听事件
     - RemoteServerCommandEvent: 这个事件当服务器RCON收到指令时调用
     - ServerCommandEvent: 这个事件当服务器后台发送指令时调用. 这是命令开始处理过程之前被触发的
+    - ServerStopEvent: 服务器关闭事件
 - vehicle: 载具类
     - EntityEnterVehicleEvent: 实体进入载具事件
     - EntityExitVehicleEvent: 实体退出载具事件
