--- a/前言/如何搭建环境.md
+++ b/前言/如何搭建环境.md
@@ -42,25 +42,28 @@ TestPlugin
 4. 在pom.xml中加入以下标签可以导入
 
 ```xml
-<distributionManagement>
-    <repository>
-        <id>releases</id>
-        <name>nukkitx-releases</name>
-        <url>https://repo.nukkitx.com/release</url>
-    </repository>
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>nukkitx-snapshots</name>
-        <url>https://repo.nukkitx.com/maven-snapshots</url>
-    </snapshotRepository>
-</distributionManagement>
 
 <repositories>
-    <repository>
-        <id>nukkitx-repo</id>
-        <name>nukkitx-snapshot</name>
-        <url>https://repo.nukkitx.com/maven-snapshots</url>
-    </repository>
+   <repository>
+            <id>opencollab-repo-release</id>
+            <url>https://repo.opencollab.dev/maven-releases/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>opencollab-repo-snapshot</id>
+            <url>https://repo.opencollab.dev/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
 </repositories>
     
 <dependencies>
